TPs/TP5/Pilar2/infra/manifests/pool/pool-rabbit.yaml
##########################################
# SERVICE HEADLESS (Requerido por StatefulSet)
##########################################
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: pool
spec:
  clusterIP: None
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      name: amqp
    - port: 15672
      name: http

---
##########################################
# SERVICE EXTERNO (LoadBalancer)
##########################################
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-external
  namespace: pool
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: http
      port: 15672
      targetPort: 15672

---
##########################################
# STATEFULSET — RabbitMQ
##########################################
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: pool
spec:
  serviceName: rabbitmq
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: infraestructura
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management

          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: http

          ############################
          # VARIABLES DE ENTORNO
          ############################
          livenessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "ping"]
            initialDelaySeconds: 60
            timeoutSeconds: 10

          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "check_port_connectivity"]
            initialDelaySeconds: 60
            timeoutSeconds: 10

          ############################
          # RECURSOS
          ############################
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          ############################
          # VOLUMES
          ############################
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq

            - name: rabbitmq-definitions
              mountPath: /etc/rabbitmq/definitions.json
              subPath: definitions.json

      volumes:
        - name: rabbitmq-definitions
          configMap:
            name: rabbitmq-definitions

  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
