TPs/TP5/Pilar2/infra/manifests/pool/pool-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: pool
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      name: redis

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: pool
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
