TPs/TP5/Pilar2/infra/manifests/pool/pool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pool
  namespace: pool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pool
  template:
    metadata:
      labels:
        app: pool
    spec:
      containers:
        - name: pool
          image: matiasherrneder/blockchain-pool:eb7d3e8
          ports:
            - containerPort: 8000
      nodeSelector:
        role: infraestructura
---
apiVersion: v1
kind: Service
metadata:
  name: pool
  namespace: pool
spec:
  type: ClusterIP
  selector:
    app: pool
  ports:
    - name: http
      port: 80
      targetPort: 8000
